Fix layout issue with transition

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,10 +2,12 @@
   padding-left: 20%;
   padding-right: 20%;
   height: 100vh;
+  overflow: hidden;
   display: flex;
   gap: 60px;
   justify-content: center;
   align-items: center;
+  font-size: 1rem;
   color: var(--black);
   position: relative;
 }
@@ -25,6 +27,7 @@
   color: var(--black);
   text-decoration: none;
   transition: transform 0.2s ease-in-out;
+  font-size: 1.1rem;
 }
 
 .links a:hover,
@@ -40,6 +43,7 @@
   justify-content: flex-end;
   gap: 10px;
   padding: 20px;
+  padding-right: 30px;
   font-size: 1.2rem;
 }
 
@@ -51,4 +55,21 @@
 
 .footer i {
   font-size: 1.5rem;
+}
+
+/* transition between sections */
+
+@keyframes swipeIn {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.swipeEffect {
+  animation: swipeIn 800ms ease-in-out;
 }
